samples/_failures_safe/1761800841_0bf235_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7943c4b8.c: In function ‘main’:
./samples/SAFE/__tmp_7943c4b8.c:161:18: error: expected ‘;’ at end of input
  161 |         input_len
      |                  ^
      |                  ;
./samples/SAFE/__tmp_7943c4b8.c:161:9: error: expected declaration or statement at end of input
  161 |         input_len
      |         ^~~~~~~~~
./samples/SAFE/__tmp_7943c4b8.c:161:9: error: expected declaration or statement at end of input
